--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@cap-js/sqlite": "^1.11.1"
   },
   "scripts": {
-    "start": "cds-serve"
-  }
+    "start": "cds-serve",
+    "watch-salesorders": "cds watch --open salesorders/webapp/index.html?sap-ui-xx-viewCache=false"
+  },
+  "sapux": [
+    "app/salesorders"
+  ]
 }
