--- a/app/salesorders/.appGenInfo.json
+++ b/app/salesorders/.appGenInfo.json
@@ -1,6 +1,6 @@
 {
   "generationParameters": {
-    "generationDate": "Mon Jun 09 2025 13:07:41 GMT+0000 (Coordinated Universal Time)",
+    "generationDate": "Mon Jun 09 2025 15:34:06 GMT+0000 (Coordinated Universal Time)",
     "generatorPlatform": "SAP Business Application Studio",
     "serviceType": "Local Cap",
     "metadataFilename": "",
@@ -25,7 +25,7 @@
       },
       {
         "type": "Navigation Entity",
-        "value": "None"
+        "value": "toSalesItems"
       }
     ],
     "launchText": "In order to launch the generated app, simply start your CAP project and navigate to the following location in your browser:\n\nhttp://localhost:4004/salesorders/webapp/index.html"
