--- a/package.json
+++ b/package.json
@@ -13,11 +13,22 @@
     "@cap-js/cds-types": "^0.10.0",
     "@cap-js/sqlite": "^1.11.1"
   },
+  "cds": {
+    "i18n": {
+      "default_language": "es",
+      "folders": [
+        "_i18n",
+        "i18n"
+      ]
+    }
+  },
   "scripts": {
     "start": "cds-serve",
     "watch-salesorders": "cds watch --open salesorders/webapp/index.html?sap-ui-xx-viewCache=false"
   },
   "sapux": [
+    "app/salesorders",
+    "app/salesorders",
     "app/salesorders"
   ]
 }
